# rust-hackathon

./: .gitignore  LICENSE  README.md
agent-py/: agent_pb2.py  agent_pb2_grpc.py  main.py
sui-cli/: Cargo.toml  build.rs
sui-cli/src/: app.rs  cli.rs  grpc_client.rs  input.rs  main.rs  ui.rs  wallet.rs
sui-mcp/: Cargo.toml
sui-mcp/src/: lib.rs  main.rs
sui-mcp/src/sui/: assets.rs  client.rs  mod.rs  transfer.rs
