[package]
name = "sui-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
ratatui = { version = "0.27.0", features = ["all-widgets"] }
tonic = "0.12.0"
prost = "0.13.0"
tokio = { version = "1.38.0", features = ["full"] }
unicode-width = "0.1.13"
pulldown-cmark = "0.13.0"
clap = { version = "4.5.4", features = ["derive"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
pbkdf2 = "0.12"
ed25519-dalek = "1.0.1"
blake2b_simd = "1.0.3"
bech32 = "0.9.1"
colored = "3.0.0"

[build-dependencies]
tonic-build = "0.12.0"
