[package]
name = "sui-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "sui_mcp"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.6.4", features = ["server"] }
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["rt-multi-thread"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
axum = "0.8.4"
tracing = "0.1.41"
schemars = "1.0.4"
reqwest = { version = "0.12.5", features = ["json"] }
tracing-appender = "0.2"
opener = "0.7.1"
bcs = "0.1.0"

# 新增的依赖
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
futures = "0.3"